app/assets/stylesheets/components/gaugesContainer.scss
.gaugesContainer {
  align-items: center;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  position: relative;
}

  .gaugesContainer-small {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    padding-top: 30px;
  }

  .gaugesContainer-exportButton {
    position: absolute;
    top: 10px;
    right: 0;
    width: 24px;
    height: 24px;
  }

